Fix searches for rating 10 (5 stars)

Summary:
The comparator callback/lambda used a string comparision, which returned
the wrong documents, as "2" > "10", and "10" < "9", i.e. selecting the
"Highest rating" in dolphin returned all documents with a rating of 2
or higher.

Convert the numeric suffix of the rating term ("R2", "R10", ...) to
an integer value and use it for comparision.

BUG: 357960

Reviewers: #baloo, #frameworks, ngraham, poboiko, mgallien

Reviewed By: #baloo, ngraham

Subscribers: kde-frameworks-devel

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D17272