src/engine/transaction.h
@@ -71,7 +71,7 @@ public:
     QVector<quint64> exec(const EngineQuery& query, int limit = -1) const;
 
     PostingIterator* postingIterator(const EngineQuery& query) const;
-    PostingIterator* postingCompIterator(const QByteArray& prefix, const QByteArray& value, PostingDB::Comparator com) const;
+    PostingIterator* postingCompIterator(const QByteArray& prefix, qlonglong value, PostingDB::Comparator com) const;
     PostingIterator* mTimeIter(quint32 mtime, MTimeDB::Comparator com) const;
     PostingIterator* mTimeRangeIter(quint32 beginTime, quint32 endTime) const;
     PostingIterator* docUrlIter(quint64 id) const;
